# kff-gtk2-template

./: .gitignore  README.md  build.sh  meson.build  meson.options  template.json
src/: main.cpp
src/include/: config.hpp
